RESOLVED FIXED145665
WebKitTestRunner leaks strings in generateWhitelist()
https://bugs.webkit.org/show_bug.cgi?id=145665
Summary WebKitTestRunner leaks strings in generateWhitelist()
Alexey Proskuryakov
Reported 2015-06-04 14:57:09 PDT
Missing adoptWK() in a loop.
Attachments
proposed fix (1.79 KB, patch)
2015-06-04 14:58 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2015-06-04 14:58:35 PDT
Created attachment 254305 [details] proposed fix
WebKit Commit Bot
Comment 2 2015-06-04 15:54:16 PDT
Comment on attachment 254305 [details] proposed fix Clearing flags on attachment: 254305 Committed r185224: <http://trac.webkit.org/changeset/185224>
WebKit Commit Bot
Comment 3 2015-06-04 15:54:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.