WebKitTestRunner leaks strings in generateWhitelist() https://bugs.webkit.org/show_bug.cgi?id=145665

Reviewed by Myles C. Maxfield.

* WebKitTestRunner/mac/TestControllerMac.mm:
(WTR::generateWhitelist):


Canonical link: https://commits.webkit.org/163703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185224 268f45cc-cd09-0410-ab3c-d52691b4dbfc