Tools/WebKitTestRunner/mac/TestControllerMac.mm
@@ -286,10 +286,12 @@ static WKRetainPtr<WKArrayRef> generateWhitelist()
     WKMutableArrayRef result = WKMutableArrayCreate();
     for (NSString *fontFamily in allowedFontFamilySet()) {
         NSArray *fontsForFamily = [[NSFontManager sharedFontManager] availableMembersOfFontFamily:fontFamily];
-        WKArrayAppendItem(result, WKStringCreateWithUTF8CString([fontFamily UTF8String]));
+        WKRetainPtr<WKStringRef> familyInFont = adoptWK(WKStringCreateWithUTF8CString([fontFamily UTF8String]));
+        WKArrayAppendItem(result, familyInFont.get());
         for (NSArray *fontInfo in fontsForFamily) {
             // Font name is the first entry in the array.
-            WKArrayAppendItem(result, WKStringCreateWithUTF8CString([[fontInfo objectAtIndex:0] UTF8String]));
+            WKRetainPtr<WKStringRef> fontName = adoptWK(WKStringCreateWithUTF8CString([[fontInfo objectAtIndex:0] UTF8String]));
+            WKArrayAppendItem(result, fontName.get());
         }
     }
 
